// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bucket is public 1`] = `
{
  "resource": {
    "aws_s3_bucket": {
      "my_bucket": {
        "bucket_prefix": "my-bucket-c8045fcc-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_policy": {
      "my_bucket_PublicPolicy_AF351571": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "depends_on": [
          "aws_s3_bucket_public_access_block.my_bucket_PublicAccessBlock_538547C0",
        ],
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":\\"*\\",\\"Action\\":[\\"s3:GetObject\\"],\\"Resource\\":[\\"\${aws_s3_bucket.my_bucket.arn}/*\\"]}]}",
      },
    },
    "aws_s3_bucket_public_access_block": {
      "my_bucket_PublicAccessBlock_538547C0": {
        "block_public_acls": false,
        "block_public_policy": false,
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "ignore_public_acls": false,
        "restrict_public_buckets": false,
      },
    },
  },
}
`;

exports[`bucket is public 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "PublicAccessBlock": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "PublicAccessBlock",
                    "path": "root/Default/my_bucket/PublicAccessBlock",
                  },
                  "PublicPolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "PublicPolicy",
                    "path": "root/Default/my_bucket/PublicPolicy",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket prefix must be lowercase 1`] = `
{
  "resource": {
    "aws_s3_bucket": {
      "The-UncannyBucket": {
        "bucket_prefix": "the-uncanny-bucket-c88a0953-",
        "force_destroy": false,
      },
    },
  },
}
`;

exports[`bucket prefix must be lowercase 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "The-Uncanny.Bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Default",
                    "path": "root/Default/The-Uncanny.Bucket/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "The-Uncanny.Bucket",
                "path": "root/Default/The-Uncanny.Bucket",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket prefix valid 1`] = `
{
  "resource": {
    "aws_s3_bucket": {
      "the-uncannybucket": {
        "bucket_prefix": "the-uncanny-bucket-c8e2755c-",
        "force_destroy": false,
      },
    },
  },
}
`;

exports[`bucket prefix valid 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "the-uncanny.bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Default",
                    "path": "root/Default/the-uncanny.bucket/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "the-uncanny.bucket",
                "path": "root/Default/the-uncanny.bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket with onCreate method 1`] = `
{
  "resource": {
    "aws_cloudwatch_log_group": {
      "my_bucket_oncreate-OnMessage0_CloudwatchLogGroup_E35B13F5": {
        "name": "/aws/lambda/oncreate-OnMessage0-c874e955",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "my_bucket_oncreate-OnMessage0_IamRole_9CAD40D5": {
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "my_bucket_oncreate-OnMessage0_IamRolePolicy_CDE0CB68": {
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.my_bucket_oncreate-OnMessage0_IamRole_9CAD40D5.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "my_bucket_oncreate-OnMessage0_IamRolePolicyAttachment_085EB554": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.my_bucket_oncreate-OnMessage0_IamRole_9CAD40D5.name}",
      },
    },
    "aws_lambda_function": {
      "my_bucket_oncreate-OnMessage0_773D84E9": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "oncreate-OnMessage0-c874e955",
          },
        },
        "function_name": "oncreate-OnMessage0-c874e955",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "reserved_concurrent_executions": 10,
        "role": "\${aws_iam_role.my_bucket_oncreate-OnMessage0_IamRole_9CAD40D5.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.my_bucket_oncreate-OnMessage0_S3Object_AF838DF5.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_lambda_permission": {
      "my_bucket_oncreate-OnMessage0_InvokePermission-c8ad674c480f4e6c0a6bf1a492e393e9ccaed211a1_7675EF40": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.my_bucket_oncreate-OnMessage0_773D84E9.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.my_bucket_oncreate_EF5D7ECA.arn}",
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
      "my_bucket": {
        "bucket_prefix": "my-bucket-c8045fcc-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_notification": {
      "my_bucket_S3BucketNotification_DDA29E8F": {
        "bucket": "\${aws_s3_bucket.my_bucket.id}",
        "depends_on": [
          "aws_sns_topic_policy.my_bucket_oncreate_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_CE3B77A7",
        ],
        "topic": [
          {
            "events": [
              "s3:ObjectCreated:Put",
            ],
            "id": "on-oncreate-notification",
            "topic_arn": "\${aws_sns_topic.my_bucket_oncreate_EF5D7ECA.arn}",
          },
        ],
      },
    },
    "aws_s3_bucket_policy": {
      "my_bucket_PublicPolicy_AF351571": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "depends_on": [
          "aws_s3_bucket_public_access_block.my_bucket_PublicAccessBlock_538547C0",
        ],
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":\\"*\\",\\"Action\\":[\\"s3:GetObject\\"],\\"Resource\\":[\\"\${aws_s3_bucket.my_bucket.arn}/*\\"]}]}",
      },
    },
    "aws_s3_bucket_public_access_block": {
      "my_bucket_PublicAccessBlock_538547C0": {
        "block_public_acls": false,
        "block_public_policy": false,
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "ignore_public_acls": false,
        "restrict_public_buckets": false,
      },
    },
    "aws_s3_object": {
      "my_bucket_oncreate-OnMessage0_S3Object_AF838DF5": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
    "aws_sns_topic": {
      "my_bucket_oncreate_EF5D7ECA": {
        "name": "oncreate-c8ad674c",
      },
    },
    "aws_sns_topic_policy": {
      "my_bucket_oncreate_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_CE3B77A7": {
        "arn": "\${aws_sns_topic.my_bucket_oncreate_EF5D7ECA.arn}",
        "policy": "{\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":{\\"Service\\":\\"s3.amazonaws.com\\"},\\"Action\\":\\"sns:Publish\\",\\"Resource\\":\\"\${aws_sns_topic.my_bucket_oncreate_EF5D7ECA.arn}\\",\\"Condition\\":{\\"ArnEquals\\":{\\"aws:SourceArn\\":\\"\${aws_s3_bucket.my_bucket.arn}\\"}}}]}",
      },
    },
    "aws_sns_topic_subscription": {
      "my_bucket_oncreate_TopicSubscription0_0EC6A2F3": {
        "endpoint": "\${aws_lambda_function.my_bucket_oncreate-OnMessage0_773D84E9.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.my_bucket_oncreate_EF5D7ECA.arn}",
      },
    },
  },
}
`;

exports[`bucket with onCreate method 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.20.3",
                },
                "id": "Code",
                "path": "root/Default/Code",
              },
              "ParameterRegistrar": {
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "id": "ParameterRegistrar",
                "path": "root/Default/ParameterRegistrar",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "PublicAccessBlock": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "PublicAccessBlock",
                    "path": "root/Default/my_bucket/PublicAccessBlock",
                  },
                  "PublicPolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "PublicPolicy",
                    "path": "root/Default/my_bucket/PublicPolicy",
                  },
                  "S3BucketNotification": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "S3BucketNotification",
                    "path": "root/Default/my_bucket/S3BucketNotification",
                  },
                  "oncreate": {
                    "children": {
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "Default",
                        "path": "root/Default/my_bucket/oncreate/Default",
                      },
                      "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                        "path": "root/Default/my_bucket/oncreate/PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                      },
                      "TopicSubscription0": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "TopicSubscription0",
                        "path": "root/Default/my_bucket/oncreate/TopicSubscription0",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A pub/sub notification topic",
                      "title": "Topic",
                    },
                    "id": "oncreate",
                    "path": "root/Default/my_bucket/oncreate",
                  },
                  "oncreate-OnMessage0": {
                    "children": {
                      "Asset": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformAsset",
                          "version": "0.20.3",
                        },
                        "id": "Asset",
                        "path": "root/Default/my_bucket/oncreate-OnMessage0/Asset",
                      },
                      "CloudwatchLogGroup": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "CloudwatchLogGroup",
                        "path": "root/Default/my_bucket/oncreate-OnMessage0/CloudwatchLogGroup",
                      },
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "Default",
                        "path": "root/Default/my_bucket/oncreate-OnMessage0/Default",
                      },
                      "IamRole": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamRole",
                        "path": "root/Default/my_bucket/oncreate-OnMessage0/IamRole",
                      },
                      "IamRolePolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamRolePolicy",
                        "path": "root/Default/my_bucket/oncreate-OnMessage0/IamRolePolicy",
                      },
                      "IamRolePolicyAttachment": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamRolePolicyAttachment",
                        "path": "root/Default/my_bucket/oncreate-OnMessage0/IamRolePolicyAttachment",
                      },
                      "InvokePermission-c8ad674c480f4e6c0a6bf1a492e393e9ccaed211a1": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "InvokePermission-c8ad674c480f4e6c0a6bf1a492e393e9ccaed211a1",
                        "path": "root/Default/my_bucket/oncreate-OnMessage0/InvokePermission-c8ad674c480f4e6c0a6bf1a492e393e9ccaed211a1",
                      },
                      "S3Object": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "S3Object",
                        "path": "root/Default/my_bucket/oncreate-OnMessage0/S3Object",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A cloud function (FaaS)",
                      "title": "Function",
                    },
                    "id": "oncreate-OnMessage0",
                    "path": "root/Default/my_bucket/oncreate-OnMessage0",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket with onDelete method 1`] = `
{
  "resource": {
    "aws_cloudwatch_log_group": {
      "my_bucket_ondelete-OnMessage0_CloudwatchLogGroup_420A05F2": {
        "name": "/aws/lambda/ondelete-OnMessage0-c8772675",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "my_bucket_ondelete-OnMessage0_IamRole_04EA7EBC": {
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "my_bucket_ondelete-OnMessage0_IamRolePolicy_635C2064": {
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.my_bucket_ondelete-OnMessage0_IamRole_04EA7EBC.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "my_bucket_ondelete-OnMessage0_IamRolePolicyAttachment_C985200D": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.my_bucket_ondelete-OnMessage0_IamRole_04EA7EBC.name}",
      },
    },
    "aws_lambda_function": {
      "my_bucket_ondelete-OnMessage0_9871443D": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "ondelete-OnMessage0-c8772675",
          },
        },
        "function_name": "ondelete-OnMessage0-c8772675",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "reserved_concurrent_executions": 10,
        "role": "\${aws_iam_role.my_bucket_ondelete-OnMessage0_IamRole_04EA7EBC.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.my_bucket_ondelete-OnMessage0_S3Object_BB790A1F.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_lambda_permission": {
      "my_bucket_ondelete-OnMessage0_InvokePermission-c8142b51acc0b500d0402de71ecbd0ecf4977ec315_E690DB87": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.my_bucket_ondelete-OnMessage0_9871443D.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.my_bucket_ondelete_C2E093CB.arn}",
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
      "my_bucket": {
        "bucket_prefix": "my-bucket-c8045fcc-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_notification": {
      "my_bucket_S3BucketNotification_DDA29E8F": {
        "bucket": "\${aws_s3_bucket.my_bucket.id}",
        "depends_on": [
          "aws_sns_topic_policy.my_bucket_ondelete_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_1B83A43C",
        ],
        "topic": [
          {
            "events": [
              "s3:ObjectRemoved:*",
            ],
            "id": "on-ondelete-notification",
            "topic_arn": "\${aws_sns_topic.my_bucket_ondelete_C2E093CB.arn}",
          },
        ],
      },
    },
    "aws_s3_bucket_policy": {
      "my_bucket_PublicPolicy_AF351571": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "depends_on": [
          "aws_s3_bucket_public_access_block.my_bucket_PublicAccessBlock_538547C0",
        ],
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":\\"*\\",\\"Action\\":[\\"s3:GetObject\\"],\\"Resource\\":[\\"\${aws_s3_bucket.my_bucket.arn}/*\\"]}]}",
      },
    },
    "aws_s3_bucket_public_access_block": {
      "my_bucket_PublicAccessBlock_538547C0": {
        "block_public_acls": false,
        "block_public_policy": false,
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "ignore_public_acls": false,
        "restrict_public_buckets": false,
      },
    },
    "aws_s3_object": {
      "my_bucket_ondelete-OnMessage0_S3Object_BB790A1F": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
    "aws_sns_topic": {
      "my_bucket_ondelete_C2E093CB": {
        "name": "ondelete-c8142b51",
      },
    },
    "aws_sns_topic_policy": {
      "my_bucket_ondelete_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_1B83A43C": {
        "arn": "\${aws_sns_topic.my_bucket_ondelete_C2E093CB.arn}",
        "policy": "{\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":{\\"Service\\":\\"s3.amazonaws.com\\"},\\"Action\\":\\"sns:Publish\\",\\"Resource\\":\\"\${aws_sns_topic.my_bucket_ondelete_C2E093CB.arn}\\",\\"Condition\\":{\\"ArnEquals\\":{\\"aws:SourceArn\\":\\"\${aws_s3_bucket.my_bucket.arn}\\"}}}]}",
      },
    },
    "aws_sns_topic_subscription": {
      "my_bucket_ondelete_TopicSubscription0_E374967A": {
        "endpoint": "\${aws_lambda_function.my_bucket_ondelete-OnMessage0_9871443D.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.my_bucket_ondelete_C2E093CB.arn}",
      },
    },
  },
}
`;

exports[`bucket with onDelete method 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.20.3",
                },
                "id": "Code",
                "path": "root/Default/Code",
              },
              "ParameterRegistrar": {
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "id": "ParameterRegistrar",
                "path": "root/Default/ParameterRegistrar",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "PublicAccessBlock": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "PublicAccessBlock",
                    "path": "root/Default/my_bucket/PublicAccessBlock",
                  },
                  "PublicPolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "PublicPolicy",
                    "path": "root/Default/my_bucket/PublicPolicy",
                  },
                  "S3BucketNotification": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "S3BucketNotification",
                    "path": "root/Default/my_bucket/S3BucketNotification",
                  },
                  "ondelete": {
                    "children": {
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "Default",
                        "path": "root/Default/my_bucket/ondelete/Default",
                      },
                      "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                        "path": "root/Default/my_bucket/ondelete/PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                      },
                      "TopicSubscription0": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "TopicSubscription0",
                        "path": "root/Default/my_bucket/ondelete/TopicSubscription0",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A pub/sub notification topic",
                      "title": "Topic",
                    },
                    "id": "ondelete",
                    "path": "root/Default/my_bucket/ondelete",
                  },
                  "ondelete-OnMessage0": {
                    "children": {
                      "Asset": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformAsset",
                          "version": "0.20.3",
                        },
                        "id": "Asset",
                        "path": "root/Default/my_bucket/ondelete-OnMessage0/Asset",
                      },
                      "CloudwatchLogGroup": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "CloudwatchLogGroup",
                        "path": "root/Default/my_bucket/ondelete-OnMessage0/CloudwatchLogGroup",
                      },
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "Default",
                        "path": "root/Default/my_bucket/ondelete-OnMessage0/Default",
                      },
                      "IamRole": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamRole",
                        "path": "root/Default/my_bucket/ondelete-OnMessage0/IamRole",
                      },
                      "IamRolePolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamRolePolicy",
                        "path": "root/Default/my_bucket/ondelete-OnMessage0/IamRolePolicy",
                      },
                      "IamRolePolicyAttachment": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamRolePolicyAttachment",
                        "path": "root/Default/my_bucket/ondelete-OnMessage0/IamRolePolicyAttachment",
                      },
                      "InvokePermission-c8142b51acc0b500d0402de71ecbd0ecf4977ec315": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "InvokePermission-c8142b51acc0b500d0402de71ecbd0ecf4977ec315",
                        "path": "root/Default/my_bucket/ondelete-OnMessage0/InvokePermission-c8142b51acc0b500d0402de71ecbd0ecf4977ec315",
                      },
                      "S3Object": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "S3Object",
                        "path": "root/Default/my_bucket/ondelete-OnMessage0/S3Object",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A cloud function (FaaS)",
                      "title": "Function",
                    },
                    "id": "ondelete-OnMessage0",
                    "path": "root/Default/my_bucket/ondelete-OnMessage0",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket with onEvent method 1`] = `
{
  "resource": {
    "aws_cloudwatch_log_group": {
      "my_bucket_oncreate-OnMessage0_CloudwatchLogGroup_E35B13F5": {
        "name": "/aws/lambda/oncreate-OnMessage0-c874e955",
        "retention_in_days": 30,
      },
      "my_bucket_ondelete-OnMessage0_CloudwatchLogGroup_420A05F2": {
        "name": "/aws/lambda/ondelete-OnMessage0-c8772675",
        "retention_in_days": 30,
      },
      "my_bucket_onupdate-OnMessage0_CloudwatchLogGroup_25463B70": {
        "name": "/aws/lambda/onupdate-OnMessage0-c8a1be62",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "my_bucket_oncreate-OnMessage0_IamRole_9CAD40D5": {
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
      "my_bucket_ondelete-OnMessage0_IamRole_04EA7EBC": {
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
      "my_bucket_onupdate-OnMessage0_IamRole_9C1FBCBE": {
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "my_bucket_oncreate-OnMessage0_IamRolePolicy_CDE0CB68": {
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.my_bucket_oncreate-OnMessage0_IamRole_9CAD40D5.name}",
      },
      "my_bucket_ondelete-OnMessage0_IamRolePolicy_635C2064": {
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.my_bucket_ondelete-OnMessage0_IamRole_04EA7EBC.name}",
      },
      "my_bucket_onupdate-OnMessage0_IamRolePolicy_27D30DCE": {
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.my_bucket_onupdate-OnMessage0_IamRole_9C1FBCBE.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "my_bucket_oncreate-OnMessage0_IamRolePolicyAttachment_085EB554": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.my_bucket_oncreate-OnMessage0_IamRole_9CAD40D5.name}",
      },
      "my_bucket_ondelete-OnMessage0_IamRolePolicyAttachment_C985200D": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.my_bucket_ondelete-OnMessage0_IamRole_04EA7EBC.name}",
      },
      "my_bucket_onupdate-OnMessage0_IamRolePolicyAttachment_E4288C48": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.my_bucket_onupdate-OnMessage0_IamRole_9C1FBCBE.name}",
      },
    },
    "aws_lambda_function": {
      "my_bucket_oncreate-OnMessage0_773D84E9": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "oncreate-OnMessage0-c874e955",
          },
        },
        "function_name": "oncreate-OnMessage0-c874e955",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "reserved_concurrent_executions": 10,
        "role": "\${aws_iam_role.my_bucket_oncreate-OnMessage0_IamRole_9CAD40D5.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.my_bucket_oncreate-OnMessage0_S3Object_AF838DF5.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
      "my_bucket_ondelete-OnMessage0_9871443D": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "ondelete-OnMessage0-c8772675",
          },
        },
        "function_name": "ondelete-OnMessage0-c8772675",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "reserved_concurrent_executions": 10,
        "role": "\${aws_iam_role.my_bucket_ondelete-OnMessage0_IamRole_04EA7EBC.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.my_bucket_ondelete-OnMessage0_S3Object_BB790A1F.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
      "my_bucket_onupdate-OnMessage0_EB805895": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "onupdate-OnMessage0-c8a1be62",
          },
        },
        "function_name": "onupdate-OnMessage0-c8a1be62",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "reserved_concurrent_executions": 10,
        "role": "\${aws_iam_role.my_bucket_onupdate-OnMessage0_IamRole_9C1FBCBE.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.my_bucket_onupdate-OnMessage0_S3Object_CD6EE6AF.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_lambda_permission": {
      "my_bucket_oncreate-OnMessage0_InvokePermission-c8ad674c480f4e6c0a6bf1a492e393e9ccaed211a1_7675EF40": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.my_bucket_oncreate-OnMessage0_773D84E9.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.my_bucket_oncreate_EF5D7ECA.arn}",
      },
      "my_bucket_ondelete-OnMessage0_InvokePermission-c8142b51acc0b500d0402de71ecbd0ecf4977ec315_E690DB87": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.my_bucket_ondelete-OnMessage0_9871443D.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.my_bucket_ondelete_C2E093CB.arn}",
      },
      "my_bucket_onupdate-OnMessage0_InvokePermission-c810a1e91f70a36a50557a2c23bc28c96365a22f22_7EE27EAF": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.my_bucket_onupdate-OnMessage0_EB805895.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.my_bucket_onupdate_DF9292B4.arn}",
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
      "my_bucket": {
        "bucket_prefix": "my-bucket-c8045fcc-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_notification": {
      "my_bucket_S3BucketNotification_DDA29E8F": {
        "bucket": "\${aws_s3_bucket.my_bucket.id}",
        "depends_on": [
          "aws_sns_topic_policy.my_bucket_oncreate_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_CE3B77A7",
          "aws_sns_topic_policy.my_bucket_onupdate_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_C89A58B9",
          "aws_sns_topic_policy.my_bucket_ondelete_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_1B83A43C",
        ],
        "topic": [
          {
            "events": [
              "s3:ObjectCreated:Put",
            ],
            "id": "on-oncreate-notification",
            "topic_arn": "\${aws_sns_topic.my_bucket_oncreate_EF5D7ECA.arn}",
          },
          {
            "events": [
              "s3:ObjectCreated:Post",
            ],
            "id": "on-onupdate-notification",
            "topic_arn": "\${aws_sns_topic.my_bucket_onupdate_DF9292B4.arn}",
          },
          {
            "events": [
              "s3:ObjectRemoved:*",
            ],
            "id": "on-ondelete-notification",
            "topic_arn": "\${aws_sns_topic.my_bucket_ondelete_C2E093CB.arn}",
          },
        ],
      },
    },
    "aws_s3_bucket_policy": {
      "my_bucket_PublicPolicy_AF351571": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "depends_on": [
          "aws_s3_bucket_public_access_block.my_bucket_PublicAccessBlock_538547C0",
        ],
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":\\"*\\",\\"Action\\":[\\"s3:GetObject\\"],\\"Resource\\":[\\"\${aws_s3_bucket.my_bucket.arn}/*\\"]}]}",
      },
    },
    "aws_s3_bucket_public_access_block": {
      "my_bucket_PublicAccessBlock_538547C0": {
        "block_public_acls": false,
        "block_public_policy": false,
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "ignore_public_acls": false,
        "restrict_public_buckets": false,
      },
    },
    "aws_s3_object": {
      "my_bucket_oncreate-OnMessage0_S3Object_AF838DF5": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
      "my_bucket_ondelete-OnMessage0_S3Object_BB790A1F": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
      "my_bucket_onupdate-OnMessage0_S3Object_CD6EE6AF": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
    "aws_sns_topic": {
      "my_bucket_oncreate_EF5D7ECA": {
        "name": "oncreate-c8ad674c",
      },
      "my_bucket_ondelete_C2E093CB": {
        "name": "ondelete-c8142b51",
      },
      "my_bucket_onupdate_DF9292B4": {
        "name": "onupdate-c810a1e9",
      },
    },
    "aws_sns_topic_policy": {
      "my_bucket_oncreate_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_CE3B77A7": {
        "arn": "\${aws_sns_topic.my_bucket_oncreate_EF5D7ECA.arn}",
        "policy": "{\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":{\\"Service\\":\\"s3.amazonaws.com\\"},\\"Action\\":\\"sns:Publish\\",\\"Resource\\":\\"\${aws_sns_topic.my_bucket_oncreate_EF5D7ECA.arn}\\",\\"Condition\\":{\\"ArnEquals\\":{\\"aws:SourceArn\\":\\"\${aws_s3_bucket.my_bucket.arn}\\"}}}]}",
      },
      "my_bucket_ondelete_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_1B83A43C": {
        "arn": "\${aws_sns_topic.my_bucket_ondelete_C2E093CB.arn}",
        "policy": "{\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":{\\"Service\\":\\"s3.amazonaws.com\\"},\\"Action\\":\\"sns:Publish\\",\\"Resource\\":\\"\${aws_sns_topic.my_bucket_ondelete_C2E093CB.arn}\\",\\"Condition\\":{\\"ArnEquals\\":{\\"aws:SourceArn\\":\\"\${aws_s3_bucket.my_bucket.arn}\\"}}}]}",
      },
      "my_bucket_onupdate_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_C89A58B9": {
        "arn": "\${aws_sns_topic.my_bucket_onupdate_DF9292B4.arn}",
        "policy": "{\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":{\\"Service\\":\\"s3.amazonaws.com\\"},\\"Action\\":\\"sns:Publish\\",\\"Resource\\":\\"\${aws_sns_topic.my_bucket_onupdate_DF9292B4.arn}\\",\\"Condition\\":{\\"ArnEquals\\":{\\"aws:SourceArn\\":\\"\${aws_s3_bucket.my_bucket.arn}\\"}}}]}",
      },
    },
    "aws_sns_topic_subscription": {
      "my_bucket_oncreate_TopicSubscription0_0EC6A2F3": {
        "endpoint": "\${aws_lambda_function.my_bucket_oncreate-OnMessage0_773D84E9.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.my_bucket_oncreate_EF5D7ECA.arn}",
      },
      "my_bucket_ondelete_TopicSubscription0_E374967A": {
        "endpoint": "\${aws_lambda_function.my_bucket_ondelete-OnMessage0_9871443D.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.my_bucket_ondelete_C2E093CB.arn}",
      },
      "my_bucket_onupdate_TopicSubscription0_0BEAE6F8": {
        "endpoint": "\${aws_lambda_function.my_bucket_onupdate-OnMessage0_EB805895.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.my_bucket_onupdate_DF9292B4.arn}",
      },
    },
  },
}
`;

exports[`bucket with onEvent method 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.20.3",
                },
                "id": "Code",
                "path": "root/Default/Code",
              },
              "ParameterRegistrar": {
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "id": "ParameterRegistrar",
                "path": "root/Default/ParameterRegistrar",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "PublicAccessBlock": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "PublicAccessBlock",
                    "path": "root/Default/my_bucket/PublicAccessBlock",
                  },
                  "PublicPolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "PublicPolicy",
                    "path": "root/Default/my_bucket/PublicPolicy",
                  },
                  "S3BucketNotification": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "S3BucketNotification",
                    "path": "root/Default/my_bucket/S3BucketNotification",
                  },
                  "oncreate": {
                    "children": {
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "Default",
                        "path": "root/Default/my_bucket/oncreate/Default",
                      },
                      "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                        "path": "root/Default/my_bucket/oncreate/PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                      },
                      "TopicSubscription0": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "TopicSubscription0",
                        "path": "root/Default/my_bucket/oncreate/TopicSubscription0",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A pub/sub notification topic",
                      "title": "Topic",
                    },
                    "id": "oncreate",
                    "path": "root/Default/my_bucket/oncreate",
                  },
                  "oncreate-OnMessage0": {
                    "children": {
                      "Asset": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformAsset",
                          "version": "0.20.3",
                        },
                        "id": "Asset",
                        "path": "root/Default/my_bucket/oncreate-OnMessage0/Asset",
                      },
                      "CloudwatchLogGroup": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "CloudwatchLogGroup",
                        "path": "root/Default/my_bucket/oncreate-OnMessage0/CloudwatchLogGroup",
                      },
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "Default",
                        "path": "root/Default/my_bucket/oncreate-OnMessage0/Default",
                      },
                      "IamRole": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamRole",
                        "path": "root/Default/my_bucket/oncreate-OnMessage0/IamRole",
                      },
                      "IamRolePolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamRolePolicy",
                        "path": "root/Default/my_bucket/oncreate-OnMessage0/IamRolePolicy",
                      },
                      "IamRolePolicyAttachment": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamRolePolicyAttachment",
                        "path": "root/Default/my_bucket/oncreate-OnMessage0/IamRolePolicyAttachment",
                      },
                      "InvokePermission-c8ad674c480f4e6c0a6bf1a492e393e9ccaed211a1": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "InvokePermission-c8ad674c480f4e6c0a6bf1a492e393e9ccaed211a1",
                        "path": "root/Default/my_bucket/oncreate-OnMessage0/InvokePermission-c8ad674c480f4e6c0a6bf1a492e393e9ccaed211a1",
                      },
                      "S3Object": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "S3Object",
                        "path": "root/Default/my_bucket/oncreate-OnMessage0/S3Object",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A cloud function (FaaS)",
                      "title": "Function",
                    },
                    "id": "oncreate-OnMessage0",
                    "path": "root/Default/my_bucket/oncreate-OnMessage0",
                  },
                  "ondelete": {
                    "children": {
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "Default",
                        "path": "root/Default/my_bucket/ondelete/Default",
                      },
                      "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                        "path": "root/Default/my_bucket/ondelete/PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                      },
                      "TopicSubscription0": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "TopicSubscription0",
                        "path": "root/Default/my_bucket/ondelete/TopicSubscription0",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A pub/sub notification topic",
                      "title": "Topic",
                    },
                    "id": "ondelete",
                    "path": "root/Default/my_bucket/ondelete",
                  },
                  "ondelete-OnMessage0": {
                    "children": {
                      "Asset": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformAsset",
                          "version": "0.20.3",
                        },
                        "id": "Asset",
                        "path": "root/Default/my_bucket/ondelete-OnMessage0/Asset",
                      },
                      "CloudwatchLogGroup": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "CloudwatchLogGroup",
                        "path": "root/Default/my_bucket/ondelete-OnMessage0/CloudwatchLogGroup",
                      },
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "Default",
                        "path": "root/Default/my_bucket/ondelete-OnMessage0/Default",
                      },
                      "IamRole": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamRole",
                        "path": "root/Default/my_bucket/ondelete-OnMessage0/IamRole",
                      },
                      "IamRolePolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamRolePolicy",
                        "path": "root/Default/my_bucket/ondelete-OnMessage0/IamRolePolicy",
                      },
                      "IamRolePolicyAttachment": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamRolePolicyAttachment",
                        "path": "root/Default/my_bucket/ondelete-OnMessage0/IamRolePolicyAttachment",
                      },
                      "InvokePermission-c8142b51acc0b500d0402de71ecbd0ecf4977ec315": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "InvokePermission-c8142b51acc0b500d0402de71ecbd0ecf4977ec315",
                        "path": "root/Default/my_bucket/ondelete-OnMessage0/InvokePermission-c8142b51acc0b500d0402de71ecbd0ecf4977ec315",
                      },
                      "S3Object": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "S3Object",
                        "path": "root/Default/my_bucket/ondelete-OnMessage0/S3Object",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A cloud function (FaaS)",
                      "title": "Function",
                    },
                    "id": "ondelete-OnMessage0",
                    "path": "root/Default/my_bucket/ondelete-OnMessage0",
                  },
                  "onupdate": {
                    "children": {
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "Default",
                        "path": "root/Default/my_bucket/onupdate/Default",
                      },
                      "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                        "path": "root/Default/my_bucket/onupdate/PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                      },
                      "TopicSubscription0": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "TopicSubscription0",
                        "path": "root/Default/my_bucket/onupdate/TopicSubscription0",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A pub/sub notification topic",
                      "title": "Topic",
                    },
                    "id": "onupdate",
                    "path": "root/Default/my_bucket/onupdate",
                  },
                  "onupdate-OnMessage0": {
                    "children": {
                      "Asset": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformAsset",
                          "version": "0.20.3",
                        },
                        "id": "Asset",
                        "path": "root/Default/my_bucket/onupdate-OnMessage0/Asset",
                      },
                      "CloudwatchLogGroup": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "CloudwatchLogGroup",
                        "path": "root/Default/my_bucket/onupdate-OnMessage0/CloudwatchLogGroup",
                      },
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "Default",
                        "path": "root/Default/my_bucket/onupdate-OnMessage0/Default",
                      },
                      "IamRole": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamRole",
                        "path": "root/Default/my_bucket/onupdate-OnMessage0/IamRole",
                      },
                      "IamRolePolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamRolePolicy",
                        "path": "root/Default/my_bucket/onupdate-OnMessage0/IamRolePolicy",
                      },
                      "IamRolePolicyAttachment": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamRolePolicyAttachment",
                        "path": "root/Default/my_bucket/onupdate-OnMessage0/IamRolePolicyAttachment",
                      },
                      "InvokePermission-c810a1e91f70a36a50557a2c23bc28c96365a22f22": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "InvokePermission-c810a1e91f70a36a50557a2c23bc28c96365a22f22",
                        "path": "root/Default/my_bucket/onupdate-OnMessage0/InvokePermission-c810a1e91f70a36a50557a2c23bc28c96365a22f22",
                      },
                      "S3Object": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "S3Object",
                        "path": "root/Default/my_bucket/onupdate-OnMessage0/S3Object",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A cloud function (FaaS)",
                      "title": "Function",
                    },
                    "id": "onupdate-OnMessage0",
                    "path": "root/Default/my_bucket/onupdate-OnMessage0",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket with onUpdate method 1`] = `
{
  "resource": {
    "aws_cloudwatch_log_group": {
      "my_bucket_onupdate-OnMessage0_CloudwatchLogGroup_25463B70": {
        "name": "/aws/lambda/onupdate-OnMessage0-c8a1be62",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "my_bucket_onupdate-OnMessage0_IamRole_9C1FBCBE": {
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "my_bucket_onupdate-OnMessage0_IamRolePolicy_27D30DCE": {
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.my_bucket_onupdate-OnMessage0_IamRole_9C1FBCBE.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "my_bucket_onupdate-OnMessage0_IamRolePolicyAttachment_E4288C48": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.my_bucket_onupdate-OnMessage0_IamRole_9C1FBCBE.name}",
      },
    },
    "aws_lambda_function": {
      "my_bucket_onupdate-OnMessage0_EB805895": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "onupdate-OnMessage0-c8a1be62",
          },
        },
        "function_name": "onupdate-OnMessage0-c8a1be62",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "reserved_concurrent_executions": 10,
        "role": "\${aws_iam_role.my_bucket_onupdate-OnMessage0_IamRole_9C1FBCBE.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.my_bucket_onupdate-OnMessage0_S3Object_CD6EE6AF.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_lambda_permission": {
      "my_bucket_onupdate-OnMessage0_InvokePermission-c810a1e91f70a36a50557a2c23bc28c96365a22f22_7EE27EAF": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.my_bucket_onupdate-OnMessage0_EB805895.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.my_bucket_onupdate_DF9292B4.arn}",
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
      "my_bucket": {
        "bucket_prefix": "my-bucket-c8045fcc-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_notification": {
      "my_bucket_S3BucketNotification_DDA29E8F": {
        "bucket": "\${aws_s3_bucket.my_bucket.id}",
        "depends_on": [
          "aws_sns_topic_policy.my_bucket_onupdate_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_C89A58B9",
        ],
        "topic": [
          {
            "events": [
              "s3:ObjectCreated:Post",
            ],
            "id": "on-onupdate-notification",
            "topic_arn": "\${aws_sns_topic.my_bucket_onupdate_DF9292B4.arn}",
          },
        ],
      },
    },
    "aws_s3_bucket_policy": {
      "my_bucket_PublicPolicy_AF351571": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "depends_on": [
          "aws_s3_bucket_public_access_block.my_bucket_PublicAccessBlock_538547C0",
        ],
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":\\"*\\",\\"Action\\":[\\"s3:GetObject\\"],\\"Resource\\":[\\"\${aws_s3_bucket.my_bucket.arn}/*\\"]}]}",
      },
    },
    "aws_s3_bucket_public_access_block": {
      "my_bucket_PublicAccessBlock_538547C0": {
        "block_public_acls": false,
        "block_public_policy": false,
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "ignore_public_acls": false,
        "restrict_public_buckets": false,
      },
    },
    "aws_s3_object": {
      "my_bucket_onupdate-OnMessage0_S3Object_CD6EE6AF": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
    "aws_sns_topic": {
      "my_bucket_onupdate_DF9292B4": {
        "name": "onupdate-c810a1e9",
      },
    },
    "aws_sns_topic_policy": {
      "my_bucket_onupdate_PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a_C89A58B9": {
        "arn": "\${aws_sns_topic.my_bucket_onupdate_DF9292B4.arn}",
        "policy": "{\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":{\\"Service\\":\\"s3.amazonaws.com\\"},\\"Action\\":\\"sns:Publish\\",\\"Resource\\":\\"\${aws_sns_topic.my_bucket_onupdate_DF9292B4.arn}\\",\\"Condition\\":{\\"ArnEquals\\":{\\"aws:SourceArn\\":\\"\${aws_s3_bucket.my_bucket.arn}\\"}}}]}",
      },
    },
    "aws_sns_topic_subscription": {
      "my_bucket_onupdate_TopicSubscription0_0BEAE6F8": {
        "endpoint": "\${aws_lambda_function.my_bucket_onupdate-OnMessage0_EB805895.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.my_bucket_onupdate_DF9292B4.arn}",
      },
    },
  },
}
`;

exports[`bucket with onUpdate method 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.20.3",
                },
                "id": "Code",
                "path": "root/Default/Code",
              },
              "ParameterRegistrar": {
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "id": "ParameterRegistrar",
                "path": "root/Default/ParameterRegistrar",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "PublicAccessBlock": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "PublicAccessBlock",
                    "path": "root/Default/my_bucket/PublicAccessBlock",
                  },
                  "PublicPolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "PublicPolicy",
                    "path": "root/Default/my_bucket/PublicPolicy",
                  },
                  "S3BucketNotification": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "S3BucketNotification",
                    "path": "root/Default/my_bucket/S3BucketNotification",
                  },
                  "onupdate": {
                    "children": {
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "Default",
                        "path": "root/Default/my_bucket/onupdate/Default",
                      },
                      "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                        "path": "root/Default/my_bucket/onupdate/PublishPermission-c8045fccc85a7ef42d5391d87958e5ce36c53a401a",
                      },
                      "TopicSubscription0": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "TopicSubscription0",
                        "path": "root/Default/my_bucket/onupdate/TopicSubscription0",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A pub/sub notification topic",
                      "title": "Topic",
                    },
                    "id": "onupdate",
                    "path": "root/Default/my_bucket/onupdate",
                  },
                  "onupdate-OnMessage0": {
                    "children": {
                      "Asset": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformAsset",
                          "version": "0.20.3",
                        },
                        "id": "Asset",
                        "path": "root/Default/my_bucket/onupdate-OnMessage0/Asset",
                      },
                      "CloudwatchLogGroup": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "CloudwatchLogGroup",
                        "path": "root/Default/my_bucket/onupdate-OnMessage0/CloudwatchLogGroup",
                      },
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "Default",
                        "path": "root/Default/my_bucket/onupdate-OnMessage0/Default",
                      },
                      "IamRole": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamRole",
                        "path": "root/Default/my_bucket/onupdate-OnMessage0/IamRole",
                      },
                      "IamRolePolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamRolePolicy",
                        "path": "root/Default/my_bucket/onupdate-OnMessage0/IamRolePolicy",
                      },
                      "IamRolePolicyAttachment": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "IamRolePolicyAttachment",
                        "path": "root/Default/my_bucket/onupdate-OnMessage0/IamRolePolicyAttachment",
                      },
                      "InvokePermission-c810a1e91f70a36a50557a2c23bc28c96365a22f22": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "InvokePermission-c810a1e91f70a36a50557a2c23bc28c96365a22f22",
                        "path": "root/Default/my_bucket/onupdate-OnMessage0/InvokePermission-c810a1e91f70a36a50557a2c23bc28c96365a22f22",
                      },
                      "S3Object": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.20.3",
                        },
                        "id": "S3Object",
                        "path": "root/Default/my_bucket/onupdate-OnMessage0/S3Object",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.3.0",
                    },
                    "display": {
                      "description": "A cloud function (FaaS)",
                      "title": "Function",
                    },
                    "id": "onupdate-OnMessage0",
                    "path": "root/Default/my_bucket/onupdate-OnMessage0",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket with two preflight files 1`] = `
{
  "resource": {
    "aws_s3_bucket": {
      "my_bucket": {
        "bucket_prefix": "my-bucket-c8045fcc-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_policy": {
      "my_bucket_PublicPolicy_AF351571": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "depends_on": [
          "aws_s3_bucket_public_access_block.my_bucket_PublicAccessBlock_538547C0",
        ],
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":\\"*\\",\\"Action\\":[\\"s3:GetObject\\"],\\"Resource\\":[\\"\${aws_s3_bucket.my_bucket.arn}/*\\"]}]}",
      },
    },
    "aws_s3_bucket_public_access_block": {
      "my_bucket_PublicAccessBlock_538547C0": {
        "block_public_acls": false,
        "block_public_policy": false,
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "ignore_public_acls": false,
        "restrict_public_buckets": false,
      },
    },
    "aws_s3_object": {
      "my_bucket_S3Object-file1txt_7AFE54AE": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "content": "test1",
        "key": "file1.txt",
      },
      "my_bucket_S3Object-file2txt_CB6BC703": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "content": "test2",
        "key": "file2.txt",
      },
    },
  },
}
`;

exports[`bucket with two preflight files 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "PublicAccessBlock": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "PublicAccessBlock",
                    "path": "root/Default/my_bucket/PublicAccessBlock",
                  },
                  "PublicPolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "PublicPolicy",
                    "path": "root/Default/my_bucket/PublicPolicy",
                  },
                  "S3Object-file1.txt": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "S3Object-file1.txt",
                    "path": "root/Default/my_bucket/S3Object-file1.txt",
                  },
                  "S3Object-file2.txt": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "S3Object-file2.txt",
                    "path": "root/Default/my_bucket/S3Object-file2.txt",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket with two preflight objects 1`] = `
{
  "resource": {
    "aws_s3_bucket": {
      "my_bucket": {
        "bucket_prefix": "my-bucket-c8045fcc-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_policy": {
      "my_bucket_PublicPolicy_AF351571": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "depends_on": [
          "aws_s3_bucket_public_access_block.my_bucket_PublicAccessBlock_538547C0",
        ],
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":\\"*\\",\\"Action\\":[\\"s3:GetObject\\"],\\"Resource\\":[\\"\${aws_s3_bucket.my_bucket.arn}/*\\"]}]}",
      },
    },
    "aws_s3_bucket_public_access_block": {
      "my_bucket_PublicAccessBlock_538547C0": {
        "block_public_acls": false,
        "block_public_policy": false,
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "ignore_public_acls": false,
        "restrict_public_buckets": false,
      },
    },
    "aws_s3_object": {
      "my_bucket_S3Object-file1txt_7AFE54AE": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "content": "hello world",
        "key": "file1.txt",
      },
      "my_bucket_S3Object-file2txt_CB6BC703": {
        "bucket": "\${aws_s3_bucket.my_bucket.bucket}",
        "content": "boom bam",
        "key": "file2.txt",
      },
    },
  },
}
`;

exports[`bucket with two preflight objects 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "PublicAccessBlock": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "PublicAccessBlock",
                    "path": "root/Default/my_bucket/PublicAccessBlock",
                  },
                  "PublicPolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "PublicPolicy",
                    "path": "root/Default/my_bucket/PublicPolicy",
                  },
                  "S3Object-file1.txt": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "S3Object-file1.txt",
                    "path": "root/Default/my_bucket/S3Object-file1.txt",
                  },
                  "S3Object-file2.txt": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "S3Object-file2.txt",
                    "path": "root/Default/my_bucket/S3Object-file2.txt",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`create a bucket 1`] = `
{
  "resource": {
    "aws_s3_bucket": {
      "my_bucket": {
        "bucket_prefix": "my-bucket-c8045fcc-",
        "force_destroy": false,
      },
    },
  },
}
`;

exports[`create a bucket 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
